--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="eu.faircode.netguard">
+    package="com.simpletool.datasaving">
 
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
@@ -15,12 +15,12 @@
     <!-- http://developer.android.com/guide/topics/security/permissions.html#normal-dangerous -->
 
     <permission
-        android:name="eu.faircode.netguard.permission.ADMIN"
+        android:name="com.simpletool.datasaving.permission.ADMIN"
         android:description="@string/app_description"
         android:label="@string/app_name"
         android:protectionLevel="signature" />
 
-    <uses-permission android:name="eu.faircode.netguard.permission.ADMIN" />
+    <uses-permission android:name="com.simpletool.datasaving.permission.ADMIN" />
 
     <uses-feature
         android:name="android.hardware.wifi"
@@ -36,7 +36,7 @@
         android:required="false" />
 
     <application
-        android:name="ApplicationEx"
+        android:name="com.simpletool.datasaving.ApplicationEx"
         android:allowBackup="false"
         android:appCategory="productivity"
         android:description="@string/app_description"
@@ -52,7 +52,7 @@
             android:value="2.1" />
 
         <activity
-            android:name=".ActivityMain"
+            android:name="com.simpletool.datasaving.ActivityMain"
             android:configChanges="orientation|screenSize"
             android:label="@string/app_name"
             android:launchMode="singleTop"
@@ -83,10 +83,10 @@
         </activity>
 
         <activity
-            android:name=".ActivitySettings"
+            android:name="com.simpletool.datasaving.ActivitySettings"
             android:configChanges="orientation|screenSize"
             android:label="@string/menu_settings"
-            android:parentActivityName=".ActivityMain">
+            android:parentActivityName="com.simpletool.datasaving.ActivityMain">
             <intent-filter>
                 <action android:name="android.service.quicksettings.action.QS_TILE_PREFERENCES" />
             </intent-filter>
@@ -97,62 +97,62 @@
 
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value=".ActivityMain" />
+                android:value="com.simpletool.datasaving.ActivityMain" />
         </activity>
 
         <activity
-            android:name=".ActivityLog"
+            android:name="com.simpletool.datasaving.ActivityLog"
             android:configChanges="orientation|screenSize"
             android:label="@string/menu_log"
-            android:parentActivityName=".ActivityMain">
+            android:parentActivityName="com.simpletool.datasaving.ActivityMain">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value=".ActivityMain" />
+                android:value="com.simpletool.datasaving.ActivityMain" />
         </activity>
 
         <activity
-            android:name=".ActivityPro"
+            android:name="com.simpletool.datasaving.ActivityPro"
             android:configChanges="orientation|screenSize"
             android:label="@string/title_pro"
-            android:parentActivityName=".ActivityMain">
+            android:parentActivityName="com.simpletool.datasaving.ActivityMain">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value=".ActivityMain" />
+                android:value="com.simpletool.datasaving.ActivityMain" />
         </activity>
 
         <activity
-            android:name=".ActivityDns"
+            android:name="com.simpletool.datasaving.ActivityDns"
             android:configChanges="orientation|screenSize"
             android:label="@string/setting_show_resolved"
-            android:parentActivityName=".ActivitySettings">
+            android:parentActivityName="com.simpletool.datasaving.ActivitySettings">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value=".ActivitySettings" />
+                android:value="com.simpletool.datasaving.ActivitySettings" />
         </activity>
 
         <activity
-            android:name=".ActivityForwarding"
+            android:name="com.simpletool.datasaving.ActivityForwarding"
             android:configChanges="orientation|screenSize"
             android:label="@string/setting_forwarding"
-            android:parentActivityName=".ActivitySettings">
+            android:parentActivityName="com.simpletool.datasaving.ActivitySettings">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value=".ActivitySettings" />
+                android:value="com.simpletool.datasaving.ActivitySettings" />
         </activity>
 
         <activity
-            android:name=".ActivityForwardApproval"
+            android:name="com.simpletool.datasaving.ActivityForwardApproval"
             android:configChanges="orientation|screenSize"
             android:label="@string/app_name"
             android:theme="@style/AppDialog">
             <intent-filter>
-                <action android:name="eu.faircode.netguard.START_PORT_FORWARD" />
-                <action android:name="eu.faircode.netguard.STOP_PORT_FORWARD" />
+                <action android:name="com.simpletool.datasaving.START_PORT_FORWARD" />
+                <action android:name="com.simpletool.datasaving.STOP_PORT_FORWARD" />
             </intent-filter>
         </activity>
 
         <service
-            android:name=".ServiceSinkhole"
+            android:name="com.simpletool.datasaving.ServiceSinkhole"
             android:label="@string/app_name"
             android:permission="android.permission.BIND_VPN_SERVICE">
             <intent-filter>
@@ -161,15 +161,15 @@
         </service>
 
         <service
-            android:name=".ServiceExternal"
+            android:name="com.simpletool.datasaving.ServiceExternal"
             android:label="@string/app_name">
             <intent-filter>
-                <action android:name="eu.faircode.netguard.DOWNLOAD_HOSTS_FILE" />
+                <action android:name="com.simpletool.datasaving.DOWNLOAD_HOSTS_FILE" />
             </intent-filter>
         </service>
 
         <service
-            android:name=".ServiceTileMain"
+            android:name="com.simpletool.datasaving.ServiceTileMain"
             android:icon="@drawable/ic_security_white_24dp"
             android:label="@string/app_name"
             android:permission="android.permission.BIND_QUICK_SETTINGS_TILE">
@@ -179,7 +179,7 @@
         </service>
 
         <service
-            android:name=".ServiceTileGraph"
+            android:name="com.simpletool.datasaving.ServiceTileGraph"
             android:icon="@drawable/ic_equalizer_white_24dp"
             android:label="@string/setting_stats_category"
             android:permission="android.permission.BIND_QUICK_SETTINGS_TILE">
@@ -189,7 +189,7 @@
         </service>
 
         <service
-            android:name=".ServiceTileFilter"
+            android:name="com.simpletool.datasaving.ServiceTileFilter"
             android:icon="@drawable/ic_filter_list_white_24dp"
             android:label="@string/setting_filter"
             android:permission="android.permission.BIND_QUICK_SETTINGS_TILE">
@@ -199,7 +199,7 @@
         </service>
 
         <service
-            android:name=".ServiceTileLockdown"
+            android:name="com.simpletool.datasaving.ServiceTileLockdown"
             android:icon="@drawable/ic_lock_outline_white_24dp"
             android:label="@string/setting_lockdown"
             android:permission="android.permission.BIND_QUICK_SETTINGS_TILE">
@@ -209,7 +209,7 @@
         </service>
 
         <receiver
-            android:name=".ReceiverAutostart"
+            android:name="com.simpletool.datasaving.ReceiverAutostart"
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.BOOT_COMPLETED" />
@@ -217,7 +217,7 @@
             </intent-filter>
         </receiver>
 
-        <receiver android:name=".ReceiverPackageRemoved">
+        <receiver android:name="com.simpletool.datasaving.ReceiverPackageRemoved">
             <intent-filter>
                 <action android:name="android.intent.action.PACKAGE_FULLY_REMOVED" />
                 <data android:scheme="package" />
@@ -225,7 +225,7 @@
         </receiver>
 
         <receiver
-            android:name=".WidgetMain"
+            android:name="com.simpletool.datasaving.WidgetMain"
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
@@ -236,7 +236,7 @@
         </receiver>
 
         <receiver
-            android:name=".WidgetLockdown"
+            android:name="com.simpletool.datasaving.WidgetLockdown"
             android:label="@string/setting_lockdown">
             <intent-filter>
                 <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
@@ -247,14 +247,14 @@
         </receiver>
 
         <receiver
-            android:name=".WidgetAdmin"
+            android:name="com.simpletool.datasaving.WidgetAdmin"
             android:label="@string/app_name"
-            android:permission="eu.faircode.netguard.permission.ADMIN">
+            android:permission="com.simpletool.datasaving.permission.ADMIN">
             <intent-filter>
-                <action android:name="eu.faircode.netguard.ON" />
-                <action android:name="eu.faircode.netguard.OFF" />
-                <action android:name="eu.faircode.netguard.LOCKDOWN_ON" />
-                <action android:name="eu.faircode.netguard.LOCKDOWN_OFF" />
+                <action android:name="com.simpletool.datasaving.ON" />
+                <action android:name="com.simpletool.datasaving.OFF" />
+                <action android:name="com.simpletool.datasaving.LOCKDOWN_ON" />
+                <action android:name="com.simpletool.datasaving.LOCKDOWN_OFF" />
             </intent-filter>
         </receiver>
     </application>
